# yarnnn-claude-agents

./: .env.example  .gitignore  ARCHITECTURE_DECISION.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  LICENSE  MERGE_TO_MAIN.md  MIGRATION.md  OPEN_SOURCE_TAGGING.md  README.md  README_LIBRARY.md  README_OLD.md  RECOMMENDED_SETUP.md  REFACTORING_PLAN.md  RESTRUCTURING_COMPLETE.md  RESTRUCTURING_PLAN.md  SESSION_HANDOFF.md  TEST_RESULTS_SUMMARY.md  YARNNN_INTEGRATION.md  YARNNN_SERVICE_INTEGRATION.md  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt
agents/content/: config.yaml
agents/reporting/: config.yaml
agents/research/: config.yaml
api/: __init__.py  dependencies.py  main.py
api/routes/: content.py  reporting.py  research.py
claude_agent_sdk/: __init__.py  base.py  interfaces.py  session.py  subagents.py
claude_agent_sdk/archetypes/: __init__.py  content_creator.py  reporting_agent.py  research_agent.py
claude_agent_sdk/integrations/: __init__.py
claude_agent_sdk/integrations/memory/: __init__.py  simple.py
claude_agent_sdk/integrations/yarnnn/: __init__.py  client.py  governance.py  memory.py  tools.py
config/: local.env.example  production.env.example
deployment/docker/: Dockerfile  docker-compose.yml
docs/: BUILDING_PROVIDERS.md  QUICK_START.md  architecture.md  architecture_old.md  getting-started.md  session-linking.md
examples/: 00_confidence_check.py  00_minimal_agent.py  01_with_yarnnn.py  02_research_agent.py  show_test_examples.py
examples/knowledge-agent/: README.md  __init__.py  agent_v2.py  run.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_base_agent.py  test_memory_provider.py  test_session.py  test_yarnnn_integration.py
