[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yarnnn-agent-deployment"
version = "1.0.0"
description = "Production deployment service for Yarnnn autonomous agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yarnnn Team"}
]
keywords = ["yarnnn", "agents", "deployment", "production"]

dependencies = [
    # Core library dependency (from open source)
    "claude-agent-sdk @ git+https://github.com/Kvkthecreator/claude-agentsdk-opensource.git@main",

    # Web service
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",

    # HTTP client
    "httpx>=0.25.0",

    # Async support
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # For testing API
    "black>=23.0.0",
    "ruff>=0.1.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "sentry-sdk[fastapi]>=1.40.0",
]

scheduling = [
    "apscheduler>=3.10.0",
]

all = [
    "yarnnn-agent-deployment[dev,monitoring,scheduling]",
]

[project.urls]
Homepage = "https://github.com/Kvkthecreator/yarnnn-claude-agents"
Repository = "https://github.com/Kvkthecreator/yarnnn-claude-agents"
"Bug Tracker" = "https://github.com/Kvkthecreator/yarnnn-claude-agents/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
